@@ -1,7 +1,7 @@
 //
 // ThreadLocal.cpp
 //
-// $Id: //poco/1.3/Foundation/src/ThreadLocal.cpp#1 $
+// $Id: //poco/1.3/Foundation/src/ThreadLocal.cpp#2 $
 //
 // Library: Foundation
 // Package: Threading
@@ -70,7 +70,7 @@ TLSAbstractSlot*& ThreadLocalStorage::get(const void* key)
 {
 	TLSMap::iterator it = _map.find(key);
 	if (it == _map.end())
-		return _map.insert(TLSMap::value_type(key, 0)).first->second;
+		return _map.insert(TLSMap::value_type(key, reinterpret_cast<Poco::TLSAbstractSlot*>(0))).first->second;
 	else
 		return it->second;
 }
