@@ -126,6 +126,9 @@ Release 1.4.0 (2010-08-??)
   Otherwise, it returns immediately and works asynchronously, as before.
 - Poco::Net::HTTPServerResponse::redirect() now accepts an optional additional
   argument to specify the HTTP status code for the redirection.       
+- fixed a warning (BinaryReader.cpp) and error (ThreadLocal.cpp) in Foundation when compiling with Visual Studio 2010
+- fixed a wrong exception in Poco::Net::POP3ClientSession
+- Poco::Net::FTPClientSession and Poco::Net::SMTPClientSession now set the error code in exceptions they throw
 
 
 Release 1.3.6p2 (2010-01-15)
@@ -1307,4 +1310,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#111 $
+$Id: //poco/1.3/dist/CHANGELOG#112 $
